update(Header): align the header menu per requirements fix(Basket): the Basket no longer overlaps with Cart button

--- a/src/components/Cart/Cart.module.sass
+++ b/src/components/Cart/Cart.module.sass
@@ -1,4 +1,5 @@
 @import '../../styles/variables'
+@import '../../styles/mixins'
 
 .cart
   display: flex
@@ -9,6 +10,16 @@
   height: 81px
   align-items: center
   margin: 0 auto
+  border-radius: 15px
+
+@include respond-to(phone)
+    .cart
+      width: 342px
+      height: 81px
+      *
+        padding: 0 10px
+
+
 
 
 
