--- a/src/components/Header/Header.module.sass
+++ b/src/components/Header/Header.module.sass
@@ -1,4 +1,5 @@
 @import '../../styles/variables'
+@import '../../styles/mixins'
 
 .header
   display: flex
@@ -29,4 +30,38 @@
     img
       width: 184px
       height: 55px
+
+@include respond-to(phone)
+    .header
+      position: relative
+      margin-bottom: 100px
+      h1
+        position: absolute
+        width: 342px
+        top: 34px
+        left: 44px
+      .aboutMenu
+        position: absolute
+        width: 59px
+        top: 50px
+        left: 265px
+      .callMenu
+        position: absolute
+        width: 59px
+        top: 50px
+        left: 346px
+      img
+        position: absolute
+        width: 184px
+        height: 55px
+        top: 108px
+        left: 230px
+
+@include respond-to(tablet)
+    .header
+      display: flex
+      justify-content: center
+
+
+
 
